Issue resolved in test case.